Add mode selection

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             <div class="board-square row4 col4 diag1 offcolor"></div>
         </div>
     </div>
+    <form id="mode-selection">
+        <input type="radio" id="players-mode" name="mode" checked="checked" value="players">
+        <label for="players-mode">2 Players</label>
+        <input type="radio" name="mode" id="cpu-mode" value="cpu">
+        <label for="cpu-mode">CPU</label>
+    </form>
     <script src="./script.js"></script>
 </body>
 </html>
