--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div class="board-square row4 col4 diag1 offcolor"></div>
         </div>
     </div>
+    <button id="reset-button" class="gameover">Reset Board</button>
     <form id="mode-selection">
         <input type="radio" id="players-mode" name="mode" checked="checked" value="players">
         <label for="players-mode">2 Players</label>
